- phone controller done - validation methods move to utils
